--- a/style/index.scss
+++ b/style/index.scss
@@ -1,15 +1,19 @@
 @import "global";
 
+
 p {
   font-size: 1.3rem;
 }
 
 .container {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .tile {
   
   margin: 0 0.5rem;
 }
+
+@import "media";
